# regfans

./: .gitignore  README.md  clean_API_DOC.py  environment.yml  pydoc-markdown.yml  pyproject.toml
.github/workflows/: publish.yml
documentation/: api.md  clean_api.py
src/regfans/: fan.py  util.py  vectorconfig.py
tests/: test_fan.py
tutorials/: all_fans_ex.py  simple_lifting_ex.py
